--- a/src/index.sass
+++ b/src/index.sass
@@ -1,11 +1,13 @@
 @charset "utf-8"
 
 @import reset-css
+@import './config/variables/style.sass'
 
 body
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+  background: $backgroundColor
 
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
