--- a/src/config/variables/style.sass
+++ b/src/config/variables/style.sass
@@ -1,4 +1,9 @@
+// color
 $backgroundColor: #F6EFE6
 $primaryColor: #3C3F6A
 $subColor: #9396C3
 $secondaryColor: #E54C58
+
+// font size
+$mediumFontSize: 16px
+$smallFontSize: 12px
