:+1: Img コンポーネント作成

--- a/src/config/variables/style.sass
+++ b/src/config/variables/style.sass
@@ -5,5 +5,10 @@ $subColor: #9396C3
 $secondaryColor: #E54C58
 
 // font size
-$mediumFontSize: 16px
 $smallFontSize: 12px
+$mediumFontSize: 16px
+
+// image
+$smallImageSize: 36px
+$mediumImageSize: 72px
+$largeImageSize: 112px
