:+1: Header コンポーネント作成

--- a/src/config/variables/style.sass
+++ b/src/config/variables/style.sass
@@ -6,6 +6,7 @@ $backgroundColor: #F6EFE6
 $primaryColor: #3C3F6A
 $subColor: #9396C3
 $secondaryColor: #E54C58
+$borderColor: #E0E0E0
 
 // font size
 $smallFontSize: 12px
