:+1: CommunityHeader コンポーネント作成

--- a/src/components/atoms/Header/styles.module.sass
+++ b/src/components/atoms/Header/styles.module.sass
@@ -1,8 +1,8 @@
 @import '../../../config/variables/style.sass'
 
 .container
+  height: $headerHeight
   padding: 0 10px
-  height: 60px
   border-bottom: 1px $borderColor solid
 
 .content
