:+1: Nav コンポーネント作成

--- a/src/config/variables/style.sass
+++ b/src/config/variables/style.sass
@@ -4,6 +4,9 @@ $breakpoint: 540px
 // header
 $headerHeight: 60px
 
+// navigation
+$navHeight: 80px
+
 // color
 $backgroundColor: #F6EFE6
 $primaryColor: #3C3F6A
