:+1: Button コンポーネント作成

--- a/src/components/atoms/Header/styles.module.sass
+++ b/src/components/atoms/Header/styles.module.sass
@@ -1,6 +1,7 @@
 @import '../../../config/variables/style.sass'
 
 .container
+  background: $backgroundColor
   height: $headerHeight
   padding: 0 10px
   border-bottom: 1px $borderColor solid
