:tada: Map コンポーネント作成

--- a/src/components/atoms/Marker/styles.module.sass
+++ b/src/components/atoms/Marker/styles.module.sass
@@ -1,8 +1,10 @@
+@import '../../../config/variables/style.sass'
+
 .pin
   width: 30px
   height: 30px
   border-radius: 50% 50% 50% 0
-  background: #00cae9
+  background: $secondaryColor
   position: absolute
   transform: rotate(-45deg)
   left: 50%
@@ -14,7 +16,7 @@
     width: 14px
     height: 14px
     margin: 8px 0 0 8px
-    background: #e6e6e6
+    background: $backgroundColor
     position: absolute
     border-radius: 50%
 
