:lipstick: Nav のデザイン修正

--- a/src/components/organisms/Nav/styles.module.sass
+++ b/src/components/organisms/Nav/styles.module.sass
@@ -1,11 +1,13 @@
 @import '../../../config/variables/style.sass'
 
 .container
+  background: $backgroundColor
   padding: 0 10px
   border-top: 1px $borderColor solid
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  position: fixed
+  bottom: 0
+  width: 100%
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
 
 .content
   max-width: $breakpoint
